src/objects/blng__PaymentAuthorization__c.object
<CustomObject>
    <description>A Payment Authorization is a hold on an account used by banks in transactions where there is a delay between the presentation of a payment method to pay for an order and the capture of funds.</description>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <description>Balance:  Current Amount - net payments</description>
        <inlineHelpText>Balance:  Current Amount - net payments</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__CurrentAmount__c</fullName>
        <description>Original Amount that we have a right to collect</description>
        <inlineHelpText>Original Amount that we have a right to collect</inlineHelpText>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__EffectiveEndDate__c</fullName>
        <description>Effective End Date that I have a right to collect</description>
        <inlineHelpText>Effective End Date that I have a right to collect</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__EffectiveStartDate__c</fullName>
        <description>Effective Start Date that I have a right to collect</description>
        <inlineHelpText>Effective Start Date that I have a right to collect</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__NetPayments__c</fullName>
        <description>Sum of Payments</description>
        <inlineHelpText>Sum of Payments</inlineHelpText>
        <label>Net Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>blng__OriginalAmount__c</fullName>
        <description>Original Amount that we have a right to collect</description>
        <inlineHelpText>Original Amount that we have a right to collect</inlineHelpText>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__PaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Method</description>
        <inlineHelpText>Payment Method</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>blng__PaymentMethod__c</referenceTo>
        <relationshipLabel>Payment Authorizations</relationshipLabel>
        <relationshipName>Payment_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Source__c</fullName>
        <description>Payment Authorization Source</description>
        <inlineHelpText>Payment Authorization Source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentAuthorizationSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <description>Payment Authorization Status</description>
        <inlineHelpText>Payment Authorization Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentAuthorizationStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Payment Authorization</label>
    <nameField>
        <label>Payment Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>